# chat-kasir

./: .gitignore  .prettierignore  AGENTS.md  PRD.md  README.md  bts.jsonc  docker-compose.yml  eslint.config.mjs  opencode.json  package.json  ppt.md  skills-lock.json  stylelint.config.mjs  tech-stack.md  tsconfig.json
.agents/skills/hallmark/site/: index.html
.agents/skills/hallmark/site/examples/bananastudio/: index.html
.agents/skills/hallmark/site/examples/hyperlane/: script.js
.agents/skills/hallmark/site/examples/najm/: script.js
.agents/skills/hallmark/site/examples/tally/: app.js
.agents/skills/hallmark/site/js/: main.js
.github/workflows/: ci.yml
.omo/run-continuation/: ses_1361c0f3fffe3P5050qVWoShgG.json
apps/core/: .env.example  .gitignore  Dockerfile  alembic.ini  config.yaml  package.json  pyproject.toml
apps/core/alembic/: env.py
apps/core/alembic/versions/: 376675eb93f2_add_server_default_to_users_updated_at.py  b56ec15594ae_add_unique_constraint_on_stores_owner_id.py  d6c9673f21af_initial_schema.py
apps/core/app/: AGENTS.md  __init__.py  dependencies.py  main.py
apps/core/app/agent/: __init__.py  errors.py  executor.py  graph.py  nodes.py  notifications.py  prompts.py  state.py  tools.py
apps/core/app/api/v1/: router.py
apps/core/app/api/v1/routes/: auth.py  cart.py  chat.py  docs.py  gowa.py  gowa_webhook.py  insights.py  orders.py  promotions.py  rag.py  store.py
apps/core/app/core/: config.py  env_validator.py  exceptions.py  logging.py
apps/core/app/db/: init_db.py  session.py
apps/core/app/docs/gowa/: openapi.yaml  webhook-payload.md
apps/core/app/middleware/: logging.py
apps/core/app/models/: __init__.py  commerce.py  database.py  user.py
apps/core/app/schemas/: chat.py  commerce.py  gowa.py  user.py
apps/core/app/services/: auth.py  bank.py  cart.py  chat.py  complaint.py  embedding.py  gowa.py  gowa_webhook.py  indexing.py  knowledge.py  llm.py  oauth.py  order.py  product.py  promotion.py  rag.py  recommendation.py  refund.py  store.py
apps/web/: components.json  next.config.ts  package.json  tsconfig.json
apps/web/public/favicon/: site.webmanifest
apps/web/src/: AGENTS.md  index.css
apps/web/src/app/: layout.tsx  manifest.ts  page.tsx
apps/web/src/app/[slug]/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/analytics/: page.tsx
apps/web/src/app/dashboard/bank/: page.tsx
apps/web/src/app/dashboard/insights/: page.tsx
apps/web/src/app/dashboard/knowledge/: page.tsx
apps/web/src/app/dashboard/orders/: page.tsx
apps/web/src/app/dashboard/products/: page.tsx
apps/web/src/app/deck/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: header.tsx  mode-toggle.tsx  providers.tsx
apps/web/src/lib/: api.ts  auth.ts  store.ts
(+3 files in other folders)
