[project]
name = "core"
version = "0.1.0"
description = "AI Chat Core API Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.1",
    "mem0ai>=2.0.2",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[scrypt]>=1.7.4",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    "httpx-oauth>=0.17.0",
    "qdrant-client>=1.14.0",
    "fastembed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N811"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20260408",
    "types-pyyaml>=6.0.12.20260518",
]
